trying to get all image captions to one line

--- a/hw3/index.html
+++ b/hw3/index.html
@@ -111,7 +111,7 @@
 						</td>
 						<td style="text-align: center;">
 							<img src="building_screenshot_3-22_12-52-51.png" width="400px" />
-							<figcaption>First somewhat complex model, a building - 39506 primitives.</figcaption>
+							<figcaption>First complex model, a building - 39506 primitives.</figcaption>
 						</td>
 					</tr>
 					<tr>
