--- a/hw3/index.html
+++ b/hw3/index.html
@@ -109,6 +109,17 @@
 							<img src="cow_screenshot_3-22_14-16-0.png" width="400px" />
 							<figcaption>Relatively low complexity cow - 5856 primitives.</figcaption>
 						</td>
+					</tr>
+				</table>
+			</div>
+
+			<div style="display: flex; flex-direction: column; align-items: center;">
+				<table style="width: 100%; text-align: center; border-collapse: collapse;">
+					<tr>
+						<td style="text-align: center;">
+							<img src="maxplanck_screenshot_3-22_12-51-51.png" width="400px" />
+							<figcaption>A bust of Max Planck - 50801 primitives.</figcaption>
+						</td>
 						<td style="text-align: center;">
 							<img src="building_screenshot_3-22_12-52-51.png" width="400px" />
 							<figcaption>First complex model, a building - 39506 primitives.</figcaption>
@@ -116,19 +127,13 @@
 					</tr>
 					<tr>
 						<td style="text-align: center;">
-							<img src="maxplanck_screenshot_3-22_12-51-51.png" width="400px" />
-							<figcaption>A bust of Max Planck - 50801 primitives.</figcaption>
-						</td>
-						<td style="text-align: center;">
 							<img src="dragon_screenshot_3-22_12-50-41.png" width="400px" />
 							<figcaption>A frightening dragon - 105120 primitives.</figcaption>
 						</td>
-					</tr>
-					<tr>
 						<td style="text-align: center;">
 							<img src="CBlucy_screenshot_3-22_12-52-29.png" width="400px" />
 							<figcaption>A devastating render of Lucy - 133796 primitives!</figcaption>
-						</td>
+						</td>						
 					</tr>
 				</table>
 			</div>
