--- a/hw3/index.html
+++ b/hw3/index.html
@@ -46,12 +46,12 @@
 	<body>
 		<div class="container">
 			<h1>CS184/284A Spring 2025 Homework 3 Write-Up</h1>
-			<div style="text-align: center;">Names: </div>
+			<div style="text-align: center;">Names: Patrick Sanchez, Karson Du </div>
 
 			<br>
 
-			Link to webpage: (TODO) <a href="https://cs184.eecs.berkeley.edu/sp25">cs184.eecs.berkeley.edu/sp25</a>
-			Link to GitHub repository: (TODO) <a href="https://cs184.eecs.berkeley.edu/sp25">cs184.eecs.berkeley.edu/sp25</a>
+			Link to webpage: <a href="https://cal-cs184-student.github.io/hw-webpages-pork-chopped-website/hw3/index.html">Webpage</a>
+			Link to GitHub repository: <a href="https://github.com/cal-cs184-student/sp25-hw3-pork3">Repo</a>
 
 			<figure>
 				<img src="cornell.png" alt="Cornell Boxes with Bunnies" style="width:70%" />
@@ -424,20 +424,8 @@
 			<h2>Part 5: Adaptive Sampling</h2>
 			Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
 
-			<h2>(Optional) Part 6: Extra Credit Opportunities</h2>
-			Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-
-			<h2>Additional Notes (please remove)</h2>
-			<ul>
-				<li>You can also add code if you'd like as so: <code>code code code</code></li>
-				<li>
-					If you'd like to add math equations,
-					<ul>
-						<li>You can write inline equations like so: \( a^2 + b^2 = c^2 \)</li>
-						<li>You can write display equations like so: \[ a^2 + b^2 = c^2 \]</li>
-					</ul>
-				</li>
-			</ul>
+			
+			
 		</div>
 	</body>
 </html>
