--- a/hw3/index.html
+++ b/hw3/index.html
@@ -58,7 +58,7 @@
 
 			<figure>
 				<img src="cornell.png" alt="Cornell Boxes with Bunnies" style="width:70%" />
-				<figcaption>You can add images with captions!</figcaption>
+				<figcaption>Geeked vs Locked in</figcaption>
 			</figure>
 
 			<!--
